# develocity-cli-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: release.yml
scripts/: build-release-binaries.sh
src/: client.rs  config.rs  error.rs  lib.rs  main.rs
src/models/: build.rs  dependencies.rs  deprecations.rs  failures.rs  mod.rs  network_activity.rs  task_execution.rs  tests.rs
src/output/: human.rs  json.rs  mod.rs
